kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: construction
  labels:
    name: construction
