kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: construction-app
  labels:
    app: construction-app
spec:
  type: ClusterIP
  selector:
    app: construction-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
